[package]
name = "cargo-futhark"
description = "A library and cargo subcommand to integrate Futhark into Rust projects."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

authors = ["Leopold Luley <git@leopoldluley.de>"]
repository = "https://github.com/luleyleo/cargo-futhark"
keywords = ["cargo", "futhark", "bindgen"]
categories = ["compilers", "command-line-utilities", "development-tools::build-utils", "development-tools::cargo-plugins", "api-bindings"]
readme = "Readme.md"

[workspace]
members = ["examples/simple", "examples/simple-lib"]

[dependencies]
bindgen = "0.65.1"
cc = "1.0.79"
clap = { version = "4.3.19", features = ["derive"] }
enumflags2 = { version = "0.7.7", features = ["std"] }
eyre = "0.6.8"
include_dir = "0.7.3"
proc-macro2 = "1.0.66"
quote = "1.0.31"
rerun_except = "1.0.0"
serde = "1.0.174"
serde_json = "1.0.103"
